<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Login">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src = "@drawable/logo"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/mainBlue"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/LoginEditTextOuter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/mainBlue"
        app:hintTextColor="@color/mainBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/LoginEditTextInner"
            app:boxStrokeColor="@color/mainBlue"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="@color/mainBlue"
            android:textCursorDrawable="@color/black"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/LoginEditTextOuter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/mainBlue"
        app:hintTextColor="@color/mainBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/LoginEditTextInner"
            app:boxStrokeColor="@color/mainBlue"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@color/mainBlue"
            android:textCursorDrawable="@color/black"
             />

    </com.google.android.material.textfield.TextInputLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:backgroundTint="@color/mainBlue"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_text"
        android:textStyle="italic"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>